# logline

./: Cargo.toml  README.md  README_EN.md  dist-workspace.toml
.github/workflows/: release.yml
src/: android_logcat.rs  app.rs  bookmarks.rs  config.rs  file_watcher.rs  grok_parser.rs  highlighter.rs  i18n.rs  log_buffer.rs  log_entry.rs  log_reader.rs  main.rs  protocol.rs  remote_server.rs  search.rs  tray.rs  virtual_scroll.rs
src/mcp/: mod.rs  server.rs  tools.rs  types.rs
src/ui/: activity_bar.rs  advanced_filters_panel.rs  app_titlebar.rs  bookmarks_panel.rs  close_dialog.rs  explorer_panel.rs  file_picker_dialog.rs  filter_panel.rs  global_search_panel.rs  grok_panel.rs  main_view.rs  mod.rs  search_bar.rs  settings_panel.rs  source_picker_dialog.rs  split_view.rs  status_bar.rs  tab_bar.rs  tab_manager.rs  toolbar.rs
